# mongo_prasma_nestjs_react

./: .eslintrc.json  .gitignore  README.md  docker-compose.yml  file_structure.html  file_structure.txt  frameworks-note.md  package.json  tsconfig.json
.github/workflows/: deploy.yml  main.yml
backend/: .env.example  Dockerfile  package.json
backend/src/: app.module.ts  main.ts
backend/src/blockchain/: blockchain.controller.ts  blockchain.module.ts  blockchain.service.ts
backend/src/config/: app.config.ts  blockchain.config.ts
backend/src/ipfs/: ipfs.controller.ts  ipfs.module.ts  ipfs.service.ts
backend/src/ipfs/dto/: ipfs.dto.ts
backend/src/nfts/: nfts.module.ts
backend/src/users/: users.controller.ts  users.service.ts
frontend/: .env.example  Dockerfile  package.json
frontend/src/config/: contracts.ts  networks.ts
frontend/src/context/: Web3Context.tsx
frontend/src/hooks/: useContract.ts  useLocalStorage.ts  useWallet.ts  useWindowSize.ts
frontend/src/pages/: _app.tsx  _document.tsx  index.tsx  nfts.tsx  profile.tsx
frontend/src/styles/: global.ts  theme.ts
frontend/src/types/: index.ts
frontend/src/utils/: ethers.ts  helpers.ts  ipfs.ts
smart-contracts/: Anchor.toml  README.md  package.json
smart-contracts/app/examples/: create-nft.ts
smart-contracts/programs/nft-marketplace/: Cargo.toml
smart-contracts/programs/token/: Cargo.toml
smart-contracts/programs/token/src/: burn.rs  lib.rs  mint.rs  transfer.rs
smart-contracts/scripts/: build-all.ts  deploy.ts  verify.ts
smart-contracts/tests/: marketplace.spec.ts  token.spec.ts
(+36 files in other folders)
